Index sends redirect to php which runs querydb.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 </head>
 
 <body>
-    <button id="fetch-db-btn"">Get DB Records.</button>
-    <!-- JS Libs -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="JS/index.js"></script>
+    <a href="main.php?run=true">Go To Start Page</a>
 </body>
 </html>
