--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 
 <body>
     <a href="main.php?run=true">Go To Start Page</a>
+    <!-- This link will add ?run=true to your URL, myfilename.php?run=true -->
 </body>
 </html>
