Added some simple frontend.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="icon" href="Images/window scraper.jpg" >
     <title>Wiki Data Scraper</title>
 </head>
-
 <body>
-    <a href="main.php?run=true">Go To Start Page</a>
+    <center>
+    <a href="main.php?run=true"> <img src="Images/Start Now.gif"/> </a>
     <!-- This link will add ?run=true to your URL, myfilename.php?run=true -->
+    </center>
 </body>
 </html>
