Added UI for results page.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Images/window scraper.jpg" >
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="CSS/index.css">
     <title>Wiki Data Scraper</title>
 </head>
 <body>
+    <div class="jumbotron">
+        <center>
+            <h1>Web Technologies laboratory Mini Project</h1>
+        </center>
+    </div>
     <center>
-    <a href="main.php?run=true"> <img src="Images/Start Now.gif"/> </a>
+        <a class="recordsbutton" href="records.html">View DB Records</a>
+    <br><br><br><br><br>
+    <a href="main.php?run=true"> <img src="Images/Start Now 1.gif"/> </a>
     <!-- This link will add ?run=true to your URL, myfilename.php?run=true -->
     </center>
 </body>
