Added Some Styling.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </center>
     </div>
     <center>
-        <a class="recordsbutton" href="records.html">View DB Records</a>
+        <a class="recordsbutton badge badge-dark text-wrap" style="width: 15rem; height: 55pt; text-indent: 70%; font-size: 20px;" href="records.html">&nbsp;&nbsp;&nbsp; View DB Records</a>
     <br><br><br><br><br>
     <a href="main.php?run=true"> <img src="Images/Start Now 1.gif"/> </a>
     <!-- This link will add ?run=true to your URL, myfilename.php?run=true -->
