Minor changes to records page and JS.

--- a/records.html
+++ b/records.html
@@ -19,7 +19,7 @@
         <div class="col-md-10">
             <div class="card">
                 <div class="card-header bg-dark text-white" style="font-size: larger;">Previous Queries Made</div>
-                <div class="card-body bg-light text-dark" id="json-card"></div>
+                <div class="card-body bg-light text-dark" id="json-card">Wait for 3 seconds...</div>
             </div>
             </div>
         </div>
